--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,29 @@
 </head>
 
 <body>
-    <div id="logo">
-        <img src="assets/imgs/icon.svg" width="160" height="160" alt="LibRedirect icon">
-        <h1>LibRedirect Frontends Manager</h1>
+    <div class="navbar">
+        <div id="logo">
+            <img src="assets/imgs/icon.svg" width="160" height="160" alt="LibRedirect icon">
+            <h1>LibRedirect Frontends Manager</h1>
+        </div>
+        <div>
+            <button id="refresh">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24"
+                    fill="currentColor">
+                    <path
+                        d="M480 896q-134 0-227-93t-93-227q0-134 93-227t227-93q69 0 132 28.5T720 366V256h80v280H520v-80h168q-32-56-87.5-88T480 336q-100 0-170 70t-70 170q0 100 70 170t170 70q77 0 139-44t87-116h84q-28 106-114 173t-196 67Z" />
+                </svg>
+                <span>Refresh</span>
+            </button>
+            <button id="quit">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24"
+                    fill="currentColor">
+                    <path
+                        d="m336 776 144-144 144 144 56-56-144-144 144-144-56-56-144 144-144-144-56 56 144 144-144 144 56 56Zm144 200q-83 0-156-31.5T197 859q-54-54-85.5-127T80 576q0-83 31.5-156T197 293q54-54 127-85.5T480 176q83 0 156 31.5T763 293q54 54 85.5 127T880 576q0 83-31.5 156T763 859q-54 54-127 85.5T480 976Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
+                </svg>
+                <span>Quit</span>
+            </button>
+        </div>
     </div>
     <div id="frontends" class="body"></div>
     <div class="note">
