--- a/src/message.html
+++ b/src/message.html
@@ -21,8 +21,7 @@
         <h1 id="message"></h1>
     </div>
     <script>
-        const message = decodeURIComponent(window.location.hash.substring(1)) + '...'
-        document.getElementById("message").innerHTML = message
+        document.getElementById("message").innerHTML = decodeURIComponent(window.location.hash.substring(1)) + '...'
     </script>
 </body>
 
