Revert "Added support for rimgo binary releases"
This reverts commit b3513f17506d4f9a1a0f14519e9d63dea72510cd.

--- a/src/message.html
+++ b/src/message.html
@@ -21,7 +21,8 @@
         <h1 id="message"></h1>
     </div>
     <script>
-        document.getElementById("message").innerHTML = decodeURIComponent(window.location.hash.substring(1)) + '...'
+        const message = decodeURIComponent(window.location.hash.substring(1)) + '...'
+        document.getElementById("message").innerHTML = message
     </script>
 </body>
 
